data/issues_nolabel/nolabel_test_13587.txt
TF fails to build on PowerPC. Issues with BoringSSL.

BoringSSL doesn't seem to have their own issue board. So I'm guessing here's the closest alternative.
System information

Have I written custom code (as opposed to using a stock example script provided in TensorFlow): No
OS Platform and Distribution (e.g., Linux Ubuntu 16.04): Linux Ubuntu 16.04.2 LTS
TensorFlow installed from (source or binary): source (github master, 10c871e)
TensorFlow version (use command below):  (doesn't compile)
Python version: 2.7.12
Bazel version (if compiling from source): 0.6.1
CUDA/cuDNN version: (not relevant)
GPU model and memory: Nvidia K40
Exact command to reproduce: bazel --host_jvm_args=-XX:+IgnoreUnrecognizedVMOptions build -c opt --config=cuda //tensorflow/tools/pip_package:build_pip_package --verbose_failures

Describe the problem
Latest TF master branch does not build on PowerPC.
Problem seems to be with BoringSSL.
This link points to a file in BoringSSL that has the following inclusions:
#include "sha/sha1-altivec.c"
#include "sha/sha1.c"

Both files included seem to have their own definition of sha1_block_data_order and both are enabled on PowerPC. This seems to cause GCC 4.8.5 to freak out (did not test other versions of gcc). My temporary fix is to remove the altivec version of sha1 and it works. Hopefully someone working on BoringSSL can take a look.
Below is the exact error message:
ERROR: /gsa/yktgsa-h2/05/tjin/.cache/bazel/_bazel_tjin/5ebd35a31f2e08b1acf4a588141b13f1/external/boringssl/BUILD:118:1: C++ compilation of rule '@boringssl//:crypto' failed (Exit 1): crosstool_wrapper_driver_is_not_gcc failed: error executing command
  (cd /gsa/yktgsa-h2/05/tjin/.cache/bazel/_bazel_tjin/5ebd35a31f2e08b1acf4a588141b13f1/execroot/org_tensorflow && \
  exec env - \
    CUDA_TOOLKIT_PATH=/usr/local/cuda \
    CUDNN_INSTALL_PATH=/usr/local/cuda-8.0 \
    GCC_HOST_COMPILER_PATH=/usr/bin/gcc \
    LD_LIBRARY_PATH=/usr/local/cuda/extras/CUPTI/lib64: \
    PATH=/usr/lib/jvm/java-8-openjdk-ppc64el/bin:/localhd/tjin/tensorflow_latest/bin:/gsa/yktgsa/home/t/j/tjin/anaconda2/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/usr/local/cuda/bin:/localhd/tjin/tensorflow_latest/bazel/output:/usr/local/cuda/bin \
    PWD=/proc/self/cwd \
    PYTHON_BIN_PATH=/localhd/tjin/tensorflow_latest/bin/python \
    PYTHON_LIB_PATH=/localhd/tjin/tensorflow_latest/lib/python2.7/site-packages \
    TF_CUDA_CLANG=0 \
    TF_CUDA_COMPUTE_CAPABILITIES=3.5,5.2 \
    TF_CUDA_VERSION=8.0 \
    TF_CUDNN_VERSION=5.1.5 \
    TF_NEED_CUDA=1 \
    TF_NEED_OPENCL=0 \
  external/local_config_cuda/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 -DNDEBUG -ffunction-sections -fdata-sections -MD -MF bazel-out/local_linux-opt/bin/external/boringssl/_objs/crypto/external/boringssl/src/crypto/fipsmodule/bcm.pic.d -fPIC -iquote external/boringssl -iquote bazel-out/local_linux-opt/genfiles/external/boringssl -iquote external/bazel_tools -iquote bazel-out/local_linux-opt/genfiles/external/bazel_tools -isystem external/boringssl/src/include -isystem bazel-out/local_linux-opt/genfiles/external/boringssl/src/include -isystem external/bazel_tools/tools/cpp/gcc3 -Wa,--noexecstack '-D_XOPEN_SOURCE=700' -Wall -Werror '-Wformat=2' -Wsign-compare -Wmissing-field-initializers -Wwrite-strings -Wshadow -fno-common -DOPENSSL_NO_ASM '-std=c11' -Wmissing-prototypes -Wold-style-definition -Wstrict-prototypes -no-canonical-prefixes -Wno-builtin-macro-redefined '-D__DATE__="redacted"' '-D__TIMESTAMP__="redacted"' '-D__TIME__="redacted"' -fno-canonical-system-headers -c external/boringssl/src/crypto/fipsmodule/bcm.c -o bazel-out/local_linux-opt/bin/external/boringssl/_objs/crypto/external/boringssl/src/crypto/fipsmodule/bcm.pic.o).
In file included from external/boringssl/src/crypto/fipsmodule/bcm.c:92:0:
external/boringssl/src/crypto/fipsmodule/sha/sha1.c:125:6: error: static declaration of 'sha1_block_data_order' follows non-static declaration
 void sha1_block_data_order(uint32_t *state, const uint8_t *data, size_t num);
      ^
In file included from external/boringssl/src/crypto/fipsmodule/bcm.c:91:0:
external/boringssl/src/crypto/fipsmodule/sha/sha1-altivec.c:190:6: note: previous definition of 'sha1_block_data_order' was here
 void sha1_block_data_order(uint32_t *state, const uint8_t *data, size_t num) {
      ^
Target //tensorflow/tools/pip_package:build_pip_package failed to build
INFO: Elapsed time: 311.401s, Critical Path: 8.71s